now wrapping facebook comments plugin in a div to fix layout issues

--- a/source/sass/_facebook-comments.scss
+++ b/source/sass/_facebook-comments.scss
@@ -1,4 +1,4 @@
-.fb-comments {
+.fbcomments {
     padding-bottom: 3rem;
     margin-bottom: 3rem;
     border-bottom: 1px solid $border-color;
